{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 221,
  "lineage": "f507ab1e-afa7-1df8-38f1-a31722c455b7",
  "resources": [
    {
      "module": "module.vpc_default",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default_network_acl",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-0fc0ad12a46240e2e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fc0ad12a46240e2e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "167127734783",
            "subnet_ids": [
              "subnet-00d18a4dddb60d242",
              "subnet-025713248446a824e",
              "subnet-05e4494d348af97ca",
              "subnet-0b3c5983ffd35c068",
              "subnet-0ef41d124a094503a",
              "subnet-0f1fb26a610ee91b0"
            ],
            "tags": {
              "Name": "default",
              "Orchestration": "Terraform"
            },
            "vpc_id": "vpc-0866ce2ca1ca3d6b8"
          },
          "dependencies": [
            "module.vpc_default.aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_default",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_route_table",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0bca0c14dd90d27de",
            "id": "rtb-0bca0c14dd90d27de",
            "owner_id": "167127734783",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "",
              "Orchestration": "Terraform"
            },
            "vpc_id": "vpc-0866ce2ca1ca3d6b8"
          },
          "dependencies": [
            "module.vpc_default.aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_default",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_security_group",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167127734783:security-group/sg-027f744d00f5611fb",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027f744d00f5611fb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "167127734783",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default",
              "Orchestration": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0866ce2ca1ca3d6b8"
          },
          "dependencies": [
            "module.vpc_default.aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_default",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167127734783:subnet/subnet-0f1fb26a610ee91b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "id": "subnet-0f1fb26a610ee91b0",
            "map_public_ip_on_launch": true,
            "owner_id": "167127734783",
            "tags": {
              "Name": "Default subnet for us-east-1a",
              "Orchestration": "Terraform"
            },
            "vpc_id": "vpc-0866ce2ca1ca3d6b8"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167127734783:subnet/subnet-0ef41d124a094503a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0ef41d124a094503a",
            "map_public_ip_on_launch": true,
            "owner_id": "167127734783",
            "tags": {
              "Name": "Default subnet for us-east-1b",
              "Orchestration": "Terraform"
            },
            "vpc_id": "vpc-0866ce2ca1ca3d6b8"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167127734783:subnet/subnet-05e4494d348af97ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-05e4494d348af97ca",
            "map_public_ip_on_launch": true,
            "owner_id": "167127734783",
            "tags": {
              "Name": "Default subnet for us-east-1c",
              "Orchestration": "Terraform"
            },
            "vpc_id": "vpc-0866ce2ca1ca3d6b8"
          }
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167127734783:subnet/subnet-0b3c5983ffd35c068",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-0b3c5983ffd35c068",
            "map_public_ip_on_launch": true,
            "owner_id": "167127734783",
            "tags": {
              "Name": "Default subnet for us-east-1d",
              "Orchestration": "Terraform"
            },
            "vpc_id": "vpc-0866ce2ca1ca3d6b8"
          }
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167127734783:subnet/subnet-025713248446a824e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.48.0/20",
            "id": "subnet-025713248446a824e",
            "map_public_ip_on_launch": true,
            "owner_id": "167127734783",
            "tags": {
              "Name": "Default subnet for us-east-1e",
              "Orchestration": "Terraform"
            },
            "vpc_id": "vpc-0866ce2ca1ca3d6b8"
          }
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167127734783:subnet/subnet-00d18a4dddb60d242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.64.0/20",
            "id": "subnet-00d18a4dddb60d242",
            "map_public_ip_on_launch": true,
            "owner_id": "167127734783",
            "tags": {
              "Name": "Default subnet for us-east-1f",
              "Orchestration": "Terraform"
            },
            "vpc_id": "vpc-0866ce2ca1ca3d6b8"
          }
        }
      ]
    },
    {
      "module": "module.vpc_default",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167127734783:vpc/vpc-0866ce2ca1ca3d6b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0fc0ad12a46240e2e",
            "default_route_table_id": "rtb-0bca0c14dd90d27de",
            "default_security_group_id": "sg-027f744d00f5611fb",
            "dhcp_options_id": "dopt-0f4336577ce972686",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0866ce2ca1ca3d6b8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bca0c14dd90d27de",
            "owner_id": "167127734783",
            "tags": {
              "Name": "Default VPC",
              "Orchestration": "Terraform"
            }
          }
        }
      ]
    }
  ]
}